--- a/scss/core.scss
+++ b/scss/core.scss
@@ -1,24 +1,26 @@
+/* Переменные */
 :root {
-    --background-primary: #ffffff; /* Основной фон (белый) */
-    --background-secondary: #2e2727; /* Для хедера и футера */
-    --card-background: #ffffff; /* Фон карточек */
-    --text-primary: #000000; /* Основной текст */
-    --text-secondary: #b3b3b3; /* Вторичный текст (футер, описания) */
-    --text-tertiary: #ffffff; /* Третичный текст (для контраста) */
-    --accent-color: #ef320f; /* Акцентный цвет (кнопки, активные элементы) */
-    --accent-color-hover: #c10000; /* Ховер для акцентного цвета */
-    --border-color: #cccccc; /* Границы, неактивные кнопки */
-    --shadow-color: rgba(0, 0, 0, 0.2); /* Тень */
-    --shadow-hover: rgba(0, 0, 0, 0.5); /* Тень при ховере */
+    --background-primary: #ffffff;
+    --background-secondary: #2e2727;
+    --card-background: #ffffff;
+    --text-primary: #000000;
+    --text-secondary: #b3b3b3;
+    --text-tertiary: #ffffff;
+    --accent-color: #ef320f;
+    --accent-color-hover: #c10000;
+    --border-color: #cccccc;
+    --shadow-color: rgba(0, 0, 0, 0.2);
+    --shadow-hover: rgba(0, 0, 0, 0.5);
 }
 
 .dark-theme {
-    --background-primary: #1a1a1a; /* Тёмный фон */
-    --card-background: #2d2d2d; /* Тёмный фон карточек */
-    --text-primary: #e0e0e0; /* Основной текст в тёмной теме (лёгкий серый для читаемости) */
-    --border-color: #444444; /* Границы в тёмной теме */
+    --background-primary: #1a1a1a;
+    --card-background: #2d2d2d;
+    --text-primary: #e0e0e0;
+    --border-color: #444444;
 }
 
+/* Сброс стилей и базовые настройки */
 * {
     margin: 0;
     padding: 0;
@@ -54,8 +56,10 @@ a {
 }
 
 .container {
-    width: 1300px;
+    width: 100%;
+    max-width: 1300px;
     margin: 0 auto;
+    padding: 0 15px;
 }
 
 /* Стили скроллбара */
@@ -78,8 +82,7 @@ a {
     background: var(--accent-color-hover);
 }
 
-// LOADER
-
+/* LOADER */
 .loader {
     position: fixed;
     top: 0;
@@ -132,23 +135,18 @@ a {
     0% {
         stroke-dashoffset: 22;
     }
-
     25% {
         stroke-dashoffset: 22;
     }
-
     50% {
         stroke-dashoffset: 0;
     }
-
     51% {
         stroke-dashoffset: 0;
     }
-
     80% {
         stroke-dashoffset: -22;
     }
-
     100% {
         stroke-dashoffset: -22;
     }
